[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/textures/arrow.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/spawnerMarker.png" type="Texture" id=2]
[ext_resource path="res://src/objects/spawner/Spawner.gd" type="Script" id=3]
[ext_resource path="res://src/objects/spawner/TextureProgress.gd" type="Script" id=4]
[ext_resource path="res://assets/textures/progressBackground.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/progressFull.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.478431 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;

uniform vec4 customColor;

void fragment() {
	vec2 newUV = UV;
	newUV.x -= TIME;
	COLOR = texture(TEXTURE, newUV);
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/customColor = Plane( 255, 0, 0, 0 )

[node name="Spawner" type="Node2D"]
script = ExtResource( 3 )

[node name="Path2D" type="Path2D" parent="."]
curve = null

[node name="Entities" type="Node" parent="."]

[node name="SpawnOffset" type="Timer" parent="."]
one_shot = true

[node name="SpawnInterval" type="Timer" parent="."]

[node name="SpritePivot" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="SpritePivot"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 1, 1, 1, 0.517056 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="SpritePivot/Sprite"]
anims/flash = SubResource( 1 )

[node name="TextureProgress" type="TextureProgress" parent="SpritePivot"]
margin_left = -19.9713
margin_top = -24.386
margin_right = 20.0287
margin_bottom = -15.386
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
nine_patch_stretch = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviewLine" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.423529 )
light_mask = -2147483647
material = SubResource( 3 )
width = 25.0
default_color = Color( 0, 0, 0, 1 )
texture = ExtResource( 1 )
texture_mode = 1
joint_mode = 2

[node name="PreviewLine2" type="Line2D" parent="."]
modulate = Color( 1, 1, 1, 0.423529 )
light_mask = -2147483647
width = 25.0
default_color = Color( 0, 0, 0, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
[connection signal="timeout" from="SpawnInterval" to="." method="_on_SpawnInterval_timeout"]
